--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-git+https://github.com/Rapptz/discord.py
-python-dotenv==0.20.0
-colorama==0.4.5
-requests==2.28.1
-aiofiles==0.8.0
-httpx==0.23.0
+discord
+simplejson
+colorama
+httpx
+Pillow
+python-dotenv
+topggpy
+psutil
+aiofiles
